--- a/index.css
+++ b/index.css
@@ -147,7 +147,7 @@ word-break: keep-all;
   padding: 1rem 3rem;
   background: linear-gradient(90deg, #e1baeb, #c596e9); 
   z-index: 10;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+  box-shadow: 0 4px 6px #a35bd9(0,0,0.1); 
 }
 
 .navbar .logo {
@@ -179,14 +179,142 @@ word-break: keep-all;
 .pagina {
   display: none;
   min-height: 100vh;
-  padding: 6rem 3rem;
-  background: #f4fdf8;
+  padding: 6rem 3rem;            
+  background: #ffffff;
+
 }
+
 
 .pagina.activa {
   display: block;
+
+
 }
+
 
 .hero.oculto {
   display: none;
+}
+.titulo {
+display: flex;
+font-size: 20px;
+background-color: #f7c8f0;
+justify-content: center;
+}
+.contenedor {
+  background-color: #f7c8f0;
+  width: 100%;
+  height: 100%;
+}
+
+.contenedor p {
+  padding: 2rem;
+  font-family: "DM Serif Text", serif;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #333333;
+}
+.tarjeta {
+  width: 250px;
+  overflow: hidden;
+  border-radius: 10%;
+  background-color: #f7c8f0;
+  box-shadow: 0 10px 20px rgba(119, 67, 133, 0.7);
+}
+.tarjeta-foto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.tarjeta-foto img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.tarjeta-nombre {
+  text-align: center;
+  font-family: "DM Serif Text", serif;
+  font-size: 15px;
+  padding: 2px;
+}
+
+.tarjetas {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.tarjeta-descripcion {
+  text-align: center;
+  font-family: "DM Serif Text", serif;
+  font-size: 14px;
+  padding: 0 10px 10px 10px;
+}
+.tarjeta-link {
+  text-align: center;
+  font-family: "DM Serif Text", serif;
+  font-size: 14px;
+  padding-bottom: 10px;
+
+}
+
+
+.contacto {
+  text-align: center;
+  margin: auto;
+  max-width: 700px;
+}
+
+.contacto-text {
+  margin-bottom: 30px;
+  font-size: 25px;
+}
+
+.contacto-form {
+  background-color: #f7c8f0;
+  padding: 30px;
+  border-radius: 15px;
+  border: 1px solid #fa79e6;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
+}
+
+.contacto-form h2 {
+  margin-top: -10px;
+}
+
+.campo {
+  display: flex;
+  text-align: left;
+  margin-bottom: 20px;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.campo input,
+.campo textarea {
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  transition: border 0.3s, box-shadow 0.3s;
+  outline: none;
+  border-color: #fa79e6;
+}
+
+textarea {
+  resize: none;
+}
+
+.btn-enviar {
+  cursor: pointer;
+  width: 180px;
+  background-color: #fa95eb;
+  color: black;
+  border: 1px solid #fa79e6;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 5px auto 0;
+  font-weight: 700;
 }
